--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,13 @@ services:
     build: ../ocremix-spider/
     volumes:
       - ocremix-html:/tmp/ocremix
+    depends_on:
+      - localstack
+    environment:
+      - ENV=dev
+      - AWS_ACCESS_KEY_ID=foo
+      - AWS_SECRET_ACCESS_KEY=bar
+      - AWS_DEFAULT_REGION=us-east-1
     command: ["scrapy", "crawl", "ocremix"]
 
   ocremix-html-parser:
