Add api back and implement logging

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,19 @@
 version: "3.9"
 services:
 
-#  ocremix-api:
-##    image: ocremix-api:latest
-#    build: ../ocremix-api/
-#    depends_on:
-#      - ocremix-mongo-db
-#    ports:
-#      - "5000:5000"
-#    environment:
-#      - MONGO_HOST=ocremix-mongo-db
-#      - MONGO_PORT=27017
-#      - MONGO_DATABASE=ocremix
-#    command: ["python", "api.py"]
+  ocremix-api:
+#    image: ocremix-api:latest
+    build: ../ocremix-api/
+    depends_on:
+      - ocremix-mongo-db
+    ports:
+      - "5000:5000"
+    environment:
+      - MONGO_HOST=ocremix-mongo-db
+      - MONGO_PORT=27017
+      - MONGO_DATABASE=ocremix
+      - ELK_HOST=logger
+    command: ["python", "main.py"]
 
   ocremix-mongo-db:
     image: mongo:latest
